Make input field readonly in index.html
Changed input field to be readonly.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <div id="layout">
         <div id="a"> 
-                <input type="text" id="inp">
+                <input type="text" id="inp" readonly>
         </div>
         <div id="b">
             <div>
@@ -121,4 +121,5 @@
     
     <script src="external.js"></script>
 </body>
+
 </html>
