Make input field readonly and non-selectable
Updated input field to be non-interactive and non-selectable.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             border: 2px solid black;
             height: 100%;
             width: 98%;
+            pointer-events: none;
+            user-select: none; 
         }
         #b div{
             border: 2px solid red;
@@ -123,3 +125,4 @@
 </body>
 
 </html>
+
